assets/css/styles.css
/* ... */
.site-section--full {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  /*flex: 1;*/ }

.hero {
  margin-top: -59.5px;
  padding-top: 59.5px;
  height: 100%; }

.hero__slider {
  position: relative;
  overflow: hidden;
  height: 100%;
  width: 100%; }

.cases {
  width: 100%;
  height: 100%;
  position: relative; }

.case {
  width: 100%;
  height: 100%;
  position: relative;
  margin-bottom: 28px; }
  .case:last-child {
    margin-bottom: 0; }

.case__info {
  position: absolute;
  top: 50%;
  z-index: 1;
  -webkit-transform: translateY(-50%);
          transform: translateY(-50%);
  width: 100%;
  height: 40px; }

.case__title {
  font-size: 30px;
  top: -65px;
  position: absolute;
  width: 100%;
  text-align: center;
  font-weight: 700;
  text-transform: uppercase;
  line-height: 1; }

.case__link {
  font-size: 15px;
  color: #fff;
  background: #000;
  border-radius: 40px;
  height: 40px;
  line-height: 40px;
  vertical-align: middle;
  text-align: center;
  width: 150px;
  display: block;
  margin: 0 auto; }

.case__figure {
  width: 100%;
  height: 100%; }

.case__image {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  -o-object-fit: cover;
     object-fit: cover;
  -o-object-position: 45% 50%;
     object-position: 45% 50%; }

.hero__scroll-anchor {
  background: #fff;
  border-radius: 100%;
  height: 40px;
  width: 40px;
  position: absolute;
  bottom: 14px;
  left: 50%;
  -webkit-transform: translateX(-50%);
          transform: translateX(-50%);
  font-size: 40px; }

.hero__slider--active {
  font-size: 0;
  line-height: 0;
  overflow: hidden;
  white-space: nowrap; }
  .hero__slider--active .cases {
    display: inline-block; }
  .hero__slider--active .case {
    display: inline-block; }
    .hero__slider--active .case:last-child {
      margin-bottom: 28px; }

.slider-nav {
  width: 270px;
  margin: 0 auto;
  position: absolute;
  top: 50%;
  left: 50%;
  margin-left: -135px; }

.slider-nav__button {
  border: 0;
  -webkit-appearance: none;
  background: #000;
  border-radius: 100%;
  color: #fff;
  width: 40px;
  height: 40px;
  padding: 0;
  cursor: pointer;
  position: absolute;
  top: 9px; }
  .slider-nav__button .i {
    font-size: 40px; }
  .slider-nav__button:focus {
    outline: 0; }

.slider-nav__button--next {
  right: 0; }

@media (min-width: 768px) {
  .hero {
    margin-top: -80.5px;
    padding-top: 80.5px; }
  .slider-nav__button {
    top: 20px; }
  .case__title {
    font-size: 40px;
    top: -82px; } }

@media (min-width: 1024px) {
  .case__title {
    font-size: 50px;
    top: -99px; }
  .case__link:hover {
    background: #fd5454;
    color: #fff; }
  .slider-nav__button:hover {
    background: #fd5454; }
  .hero__scroll-anchor {
    height: 54px;
    width: 54px;
    position: absolute;
    bottom: 35px;
    left: 50%;
    -webkit-transform: translateX(-50%);
            transform: translateX(-50%);
    font-size: 50px;
    line-height: 54px;
    vertical-align: middle; }
    .hero__scroll-anchor .i {
      text-align: center; }
    .hero__scroll-anchor .i:before {
      content: "\e90b";
      display: block; }
    .hero__scroll-anchor .i:after {
      display: block;
      content: "\e901";
      font-size: 40px;
      color: #fff; } }

.about {
  padding: 59.5px 22px;
  max-width: 940px;
  margin: 0 auto; }

.about__title {
  font-size: 20px;
  text-transform: uppercase;
  line-height: 28px;
  margin-bottom: 17.5px;
  text-align: center; }

.about__content {
  font-size: 15px;
  font-weight: 300;
  text-align: center; }

@media (min-width: 768px) {
  .about {
    padding: 84px 84px; }
  .about__title {
    font-size: 30px;
    line-height: 42px;
    margin-bottom: 28px; }
  .about__content {
    font-size: 20px;
    line-height: 28px; } }

@media (min-width: 1024px) {
  .about {
    padding: 84px 42px; }
  .about__content {
    font-size: 23.75px;
    line-height: 35px; } }

@media (min-width: 1440px) {
  .about {
    padding: 98px 0; } }

.feed {
  background: url(../imgs/feed-bg_2048.jpg) no-repeat top center;
  background-size: auto 100%;
  padding: 59.5px 22px; }

.feed__header {
  margin-bottom: 28px; }

.feed__cta {
  font-size: 20px;
  color: #789199;
  text-align: center;
  text-transform: uppercase;
  margin-bottom: 14px; }

.feed__link {
  color: #fff;
  text-align: center;
  display: block;
  font-weight: 300;
  font-size: 20px; }

.pics {
  max-width: 940px;
  margin: 0 auto; }

.pic {
  margin-bottom: 21px; }

.pic__caption {
  background: #fff;
  padding: 14px 21px;
  font-size: 15px;
  color: #76797f; }

@media (min-width: 768px) {
  .feed {
    padding: 84px 84px;
    background-size: cover; }
  .feed__cta {
    font-size: 30px;
    margin-bottom: 21px; }
  .feed__link {
    font-size: 30px; }
  .pics__list {
    -webkit-columns: 2;
       -moz-columns: 2;
            columns: 2; }
  .pic {
    -webkit-column-break-inside: avoid;
       page-break-inside: avoid;
            break-inside: avoid;
    display: inline-block; } }

@media (min-width: 1024px) {
  .feed {
    padding: 84px 42px;
    background-image: url(../imgs/feed-bg_2880.jpg); }
  .pics__list {
    -webkit-columns: 3;
       -moz-columns: 3;
            columns: 3; } }

@media (min-width: 1440px) {
  .feed {
    padding: 98px 42px;
    background-image: url(../imgs/feed-bg.jpg); }
  .feed__header {
    margin-bottom: 49px; } }

.contact {
  background: url(../imgs/feed-bg.jpg) no-repeat top center;
  background-size: cover;
  padding: 59.5px 10px 98px 10px; }

.contact-form {
  max-width: 620px;
  margin: 0 auto; }

.contact-form__cta {
  text-align: center;
  color: #fff;
  margin-bottom: 28px;
  font-size: 20px;
  text-transform: uppercase;
  line-height: 28px; }

.contact-form__inputs {
  background: rgba(255, 255, 255, 0.2);
  padding: 21px 10px;
  margin: 0 -10px 21px -10px; }
/* ... */

